@@ -146,7 +146,7 @@
 </head>
 <body>
 <h1>Plotscripting Dictionary</h1>
-<h2>For the current OHRRPGCE work-in-progress version (2018-08-30)</h2>
+<h2>For the current OHRRPGCE work-in-progress version (2018-09-08)</h2>
 <p>This is the documentation for all <a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting">plotscripting</a> commands.
 				In addition to reading this document, we also recommend you check out the
 				<a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting_Tutorial">Plotscripting Tutorial</a>
@@ -2958,6 +2958,9 @@
 	
 		
 		<a href="#about-tileconstants">south wall</a><br>
+	
+		<a href="#about-speakingnpc">speaking npc</a><br>
+		
 	
 		<a href="#about-spellslearned">spells learned (hero,number)</a><br>
 		
@@ -5983,7 +5986,30 @@ resume box advance # go back to normal</pre>
 			Returns the number of the currently displayed text box, or -1 if there's none.
 			
 			
+			<div class="seealso">See also: <ul>
+<li>
+<a href="#about-speakingnpc" class="ref">speaking npc</a>, </li>
+<li>
+<a href="#about-showtextbox" class="ref">show text box</a>, </li>
+<li><a href="#about-advancetextbox" class="ref">advance text box</a></li>
+</ul>
+</div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-speakingnpc"></a>
+		<h4>speaking npc</h4>
+<p>
 			
+				If the player activated an NPC which showed a textbox
+				and the hero and NPC are still "speaking" (the textbox chain isn't done),
+				returns the NPC reference for that NPC.
+				Otherwise returns false.
+			
+			
+			
+			<div class="seealso">See also: <ul><li><a href="#about-currenttextbox" class="ref">current text box</a></li></ul>
+</div>
 		</p>
 </div>
 		<div class="command">
@@ -9408,7 +9434,22 @@ end
 <a name="about-inputstring"></a>
 		<h4>input string (ID, maxlength, use current, center, position x, position y)</h4>
 <p>
-			Allows the player to type in a string (until they press ENTER). Returns false if they press ESC to cancel. <span class="param">ID</span> is the string you want to use. All other arguments are optional: <span class="param">maxlen</span> is the length of input, if left blank the limit will be set to 40 (max visible onscreen length). <span class="param">use current</span> is whether you want to add to the existing string, or clear the string before typing. The default is to clear the string before typing, valid arguments are <a href="#about-booleanconstants" class="ref">true</a> or <a href="#about-booleanconstants" class="ref">false</a>. The string will be centered (see <a href="#about-centerstringat" class="ref">center string at</a> unless <span class="param">center</span> is <a href="#about-booleanconstants" class="ref">false</a>. If the string is not visible, then it will automatically be placed onscreen (centered if not specified) and hidden when done. <span class="param">position x</span> and <span class="param">position y</span> are optional (defaulting to the center of the screen), and are the position at which the string will be shown as it is being typed; otherwise the string will use its current positioning if already visible.
+			
+				Allows the player to type in a string (until they press ENTER).
+				Returns false if they press ESC to cancel.
+				<span class="param">ID</span> is the string you want to use.
+				All other arguments are optional:
+				<span class="param">maxlen</span> is the length of input, if left blank the limit will be equal to
+				the maximum length that fits on-screen (40 characters if the screen is the default 320 pixels wide).
+				<span class="param">use current</span> is whether you want to add to the existing string, or clear the string before typing.
+				The default is to clear the string before typing, valid arguments are <a href="#about-booleanconstants" class="ref">true</a> or <a href="#about-booleanconstants" class="ref">false</a>.
+				The string will be centered (see <a href="#about-centerstringat" class="ref">center string at</a> unless <span class="param">center</span> is <a href="#about-booleanconstants" class="ref">false</a>.
+				If the string is not visible, then it will automatically be placed onscreen
+				(centered if not specified) and hidden when done.
+				<span class="param">position x</span> and <span class="param">position y</span> are optional (defaulting to the center of the screen),
+				and are the position at which the string will be shown as it is being typed;
+				otherwise the string will use its current positioning if already visible.
+			
 			
 			
 			<div class="seealso">See also: <ul><li><a href="#about-getinputtext" class="ref">get input text</a></li></ul>
@@ -19535,7 +19576,7 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 853 commands (of which 48 are aliases), 64 constants and 10 definitions of types and other terms in this file.</p>
+<p>Stats: There are 854 commands (of which 48 are aliases), 64 constants and 10 definitions of types and other terms in this file.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
