@@ -86,6 +86,7 @@ June (mumble) 2018 [Fufluns]
       auto-pick if there's only one active hero [Ralph]
     * hspeak is several times faster when compiling very large scripts [Ralph]
     * "set last save slot" [Ralph]
+    * "speaking npc" [Ralph]
 
   * Changes
     * "Previous attack" base ATK stat renamed to "Last damage by attacker"
